--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
+body {
+  background-color: lightgray;
+}
 
+h1 {
+  text-align: center;
+  font-family: cursive;
+  font-size: 100px;
+  margin-top: 20px;
+  color: orchid;
+}
+
+h3, button{
+  margin: 20px 0;
+}
+
+form img {
+  width: 100px;
+}
