--- a/src/styles.css
+++ b/src/styles.css
@@ -15,15 +15,25 @@ h3, button{
   margin: 20px 0;
 }
 
+p {
+  font-size: 20px;
+}
+
 form img {
   width: 100px;
 }
 
-.character-sheet {
+.game-interface {
   display: none;
+}
+
+.character-sheet {
   border: 1px solid black;
-  background-color: white;
+  background-color: thistle;
   border-radius: 3px;
   padding: 10px 20px;
-  width: 30%;
+}
+
+.character-image {
+  margin: 10px 0;
 }
