--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,14 @@
 body {
-  background-color: lightgray;
+  background-color: #9aedd1;
 }
 
 h1 {
   text-align: center;
   font-family: cursive;
-  font-size: 100px;
+  font-size: 150px;
   margin-top: 20px;
   color: orchid;
+  font-weight: bold;
   text-shadow: 2px 2px darkorchid;
 }
 
@@ -50,9 +51,19 @@ form img {
   text-align: center;
 }
 
-.battle img:hover, .store img:hover {
+.battle img, .store img, .inventory-image {
+  transition: all 0.1s;
+}
+
+.battle img:hover, .store img:hover, .inventory-image:hover {
   filter:grayscale();
   cursor: pointer;
+}
+
+.battle img:active, .store img:active {
+  transform: scale(1.1);
+  border: none;
+  outline: 0;
 }
 
 .store {
@@ -69,8 +80,8 @@ form img {
 }
 
 .inventory-image {
-  width: 50px;
-  margin: 2px;
+  width: 60px;
+  margin: 10px 3px;
 }
 
 .col-4, .col-3 {
